[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/level/tex_bot_customization_station.png" type="Texture" id=1]
[ext_resource path="res://assets/level/sfx_bot_station_enter.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/levels/bot station/BotStation.gd" type="Script" id=3]
[ext_resource path="res://assets/level/sfx_bot_station_exit.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fading"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.117647 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="BotStation" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="Sprite"]
anims/fading = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="EnterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="ExitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
